--- a/src/pages/component/index.less
+++ b/src/pages/component/index.less
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 0;
+    padding-top: 84px;
     font-family: PingFangSC,Microsoft Yahei,Hiragino Sans GB,Lantinghei SC,"Microsoft Sans Serif",WenQuanYi Micro Hei,sans-serif;
     box-sizing: border-box;
     
