“完成基本页面”

--- a/src/pages/component/HomePage/index.less
+++ b/src/pages/component/HomePage/index.less
@@ -1,4 +1,4 @@
-    .homePage {
+    .homepage {
         &_wrapper {
             font-size: 16px;
             height: calc(100vh - 84px);
@@ -96,12 +96,13 @@
             font-size: 0;
         }
         
-        &_container {
+        &_container-1 {
             padding: 47px 0 40px;
             width: 100%;
             align-items: center;
             display: flex;
             flex-direction: column;
+            background-color: rgb(255, 255, 255);
         }
 
         &_containerTitle {
@@ -181,6 +182,516 @@
             border-radius: 6px;
             border: 3px solid rgb(32, 124, 211);
         }
+        
+        &_optBtn {
+            display: flex;
+            margin-top: 3.5%;
+            text-align: center;
+        }
+        
+
+        &_btn {
+            width: 190px;
+            height: 52px;
+            border: 1px solid #207cd3;
+            box-shadow: 0 3px 9px 0 rgba(41, 70, 167, 0.20);
+            border-radius: 26px;
+            font-size: 20px;
+            text-align: center;
+            outline: none;
+            text-decoration: none;
+            cursor: pointer;
+            border-color: rgb(32, 124, 211);
+            line-height: 52px;
+        }
+        &_detailedIntroduce {
+            color: rgb(32, 124, 211);
+            margin-right: 35px;
+            background: #fff;
+        }
+
+        &_freeToCreate {
+            background-color: rgb(32, 124, 211);
+            margin-right: 0;
+            color: #fff;
+            background: #207cd3;
+        }
+        
+        &__container-2 {
+            padding: 47px 0 40px;
+            width: 100%;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            background-color: rgb(249, 249, 249);
+        }
+
+        &_officialAccountPanel {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        &_descCards {
+            display: flex;
+            width: 100%;
+            padding: 0 8.9%;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        &_descCard {
+            width: 48.7%;
+        }
+
+        &_descCard :nth(odd), &&_decCard :nth(2) {
+            margin-right: 2.6%;
+        }
+
+        &_OACard {
+            width: 100%;
+            background: #fff;
+            box-shadow: 0 2px 13px 0 rgba(16, 36, 213, 0.1);
+            border-radius: 10px;
+            padding: 25px 0 25px 25px;
+            display: flex;
+            align-items: center;
+        }
+
+        &_OACardImg {
+            width: 34.1%;
+            margin-right: 5.6%;
+        }
+
+        &_OACardContent {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        &_OACardTitle {
+            margin-bottom: 25px;
+            font-weight: 700;
+            font-size: 22px;
+        }
+        
+        &_OACardDescriptions {
+            flex: 1 1;
+            height: 58px;
+            display: flex;
+            align-items: flex-start;
+            flex-wrap: wrap;
+        }
+
+        &_OACardDescItem {
+            width: 50%;
+            font-size: 16px;
+            display: flex;
+            color: #666;
+            align-items: center;
+        }
+
+        &_OACardDescItem :nth-child(2) {
+            margin-bottom: 10px;
+        }
+
+        &_OACardDescItemIcon {
+            font-size: 16px;
+            margin-right: 16px;
+            align-items: center;
+        }
+
+        &__iconfont ::before {
+            font-family: iconfont!important;
+            font-size: 16px;
+            font-style: normal;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        &_immediateUse {
+            color: #fff;
+            background: #207cd3;
+            border-color: rgb(32, 124, 211);
+        }
+
+        &_container-3 {
+            background-color: rgb(249, 249, 249);
+            padding: 47px 0 40px;
+            width: 100%;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &_marketingPanel {
+            width: 100%;
+            padding: 0 8.9%;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        &_marketingPanelItem {
+            width: 100%;
+            margin-bottom: 2.6%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        &_marketingItemCard {
+            position: relative;
+            z-index: 300;
+            flex: 1 1;
+        }
+        
+        &_marketingCard {
+            align-items: flex-end;
+            width: 100%;
+            height: 100%;
+            background: #fff;
+            box-shadow: 0 6px 14px 3px rgba(16, 36, 213, 0.08);
+            border-radius: 10px;
+            padding: 0 36px 40px 36px;
+            display: flex;
+        }
+
+        &_marketingCardContent {
+            flex: 1 1;
+            height: 100%;
+            flex-direction: column;
+            display: flex;
+            width: 495px;
+            height: 370px;
+        }
+
+        &_marketingCardTitle {
+            font-weight: 700;
+            font-size: 30px;
+            border-bottom: 1px solid #ebebeb;
+            padding: 30px 0;
+        }
+
+        &_marketingCardDescriptions {
+            padding-top: .3rem;
+            flex-direction: column;
+            display: flex;
+        }
+
+        &_marketingDescItem {
+            min-width: 40%;
+            margin-bottom: 3%;
+            font-size: 16px;
+            align-items: flex-start;
+            display: flex;
+            color: #666;
+        }
+
+        &_marketingDescIcon {
+            font-size: 16px;
+            margin-right: 16px;
+            align-items: center;
+        }
+
+        &_marketingCircleIcon-1, &_marketingCircleIcon-2, &_marketingCircleIcon-3 {
+            position: relative;
+            margin-top: 6px;
+            width: 11px;
+            height: 11px;
+            background: #fff;
+            border-radius: 6px;
+        }
+
+        &_marketingCircleIcon-1 {
+            border: 3px solid rgb(247, 146, 65);
+        }
+
+        &_marketingCircleIcon-2 {
+            border: 3px solid rgb(119, 0, 241);
+        }
+
+        &_marketingCircleIcon-3 {
+            border: 3px solid rgb(61, 83, 236);
+        }
+
+        &_marketingBtn-1, &_marketingBtn-2, &_marketingBtn-3 {
+            color: #fff;
+            margin-top: 42px;
+        }
+
+        &_marketingBtn-1 {
+            border-color: rgb(247, 146, 65);
+            background-color: rgb(247, 146, 65);
+        }
+
+        &_marketingBtn-2 {
+            border-color: rgb(119, 0, 241);
+            background-color: rgb(119, 0, 241);
+        }
+
+        &_marketingBtn-3 {
+            border-color: rgb(61, 83, 236);
+            background-color: rgb(61, 83, 236);
+        }
+
+        &_marketingItemImg-1, &_marketingItemImg-3  {
+            width: 54.33%;
+            margin-left: -2%;
+        }
+
+       &_marketingItemImg-2 {
+            width: 54.33%;
+            margin-left: 0;
+            margin-right: -2%;
+        }
+        
+        &_container-4 {
+            background-color: rgb(255, 255, 255);
+            padding: 47px 0 40px;
+            width: 100%;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &_userPanel {
+            color: #222;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        &_userPanelData {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
+        }
+
+        &_dataItem {
+            line-height: 1;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        &_dataNumber {
+            margin-bottom: .4rem;
+        }
+
+        &_emphasisNum {
+            color: #207cd3;
+            font-size: 85px;
+            font-family: PingFangSC-Medium;
+        }
+
+        &_plusSymbol {
+            color: #207cd3;
+            font-size: 60px;
+            font-weight: 700;
+        }
+
+        &_dataunit {
+            font-size: 36px;
+        } 
+
+        &_dataTitle {
+            font-size: 24px;
+            font-weight: 700;
+        }
+
+        &_userPanelWords {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &_emphasisText {
+            font-size: 38px;
+            margin-bottom: 40px;
+            margin-top: 86px;
+            font-weight: 700;
+        }
+
+        &_shallowText {
+            color: #444;
+            font-size: 24px;
+            line-height: 1.8;
+        }
+
+        &_usersPanelUl {
+            margin-top: 70px;
+            position: relative;
+            width: 100%;
+        }
+
+        &_userPanelLink {
+            display: inline-block;
+            font-size: 0;
+            margin-bottom: 16px;
+            text-align: center;
+            width: 14%;
+        }
+
+        &_userPanelLink a {
+            color: #fff;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        &_usersPanelLogo {
+            height: 67px;
+            width: 140px;
+        }
+
+        &_ourInfo {
+            width: 100%;
+            background-color: #383838;
+            padding: 58px 0 92px;
+            font-family: MicrosoftYaHei,PingFangSC,Hiragino Sans GB,Lantinghei SC,"Microsoft Sans Serif",WenQuanYi Micro Hei,sans-serif;
+            font-size: 16px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &_ourInfoContainer {
+            width: 90%;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        &_callingCard {
+            display: flex;
+            flex-direction: column;
+        }
+
+        &_callingCardTitle {
+            color: #fff;
+            font-size: 18px;
+            font-family: MicrosoftYaHei,PingFangSC,Hiragino Sans GB,Lantinghei SC,"Microsoft Sans Serif",WenQuanYi Micro Hei,sans-serif;
+            margin-bottom: 25px;
+            display: flex;
+            align-items: center;
+        }
+
+        &_verticalLine {
+            width: 2px;
+            height: 17px;
+            background-color: #428cff;
+            margin-right: 10px;
+        }
+
+        &_callingCardCut {
+            height: 2px;
+            width: 268px;
+            background-color: #262626;
+        }
+
+        &_callingCardContent {
+            font-size: 12px;
+            color: #b3b3b3;
+            line-height: 2;
+        }
+
+        &_ourInfoItems {
+            margin-top: 14px;
+            padding-left: 8px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &_ourInfoItem {
+            color: #b3b3b3;
+            text-decoration: none;
+        }
+
+        &_QRcodeWrapper {
+            display: flex;
+        }
+
+        &_QRcodeContainer-1 {
+            margin-right: 20px;
+        }
+
+        &_QRcodeContainerTitle {
+            margin-bottom: 9px;
+        }
+
+        &_QRcode {
+            width: 84px;
+            height: 84px;
+            background: #fff;
+            border-radius: 6px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &_QRcode img {
+            width: 97%;
+            height: auto;
+            border-radius: 6px;
+        }
+
+        &_ourInfoEmail {
+            margin-top: 12px;
+        }
+
+        &_freeTrial {
+            display: flex;
+            align-items: stretch;
+        }
+
+        &_freeTrial-input {
+            width: 180px;
+            height: 49px;
+            background: #282828;
+            border: 1px solid #198ed9;
+            box-shadow: 3px 2px 6px 0 rgb(0 0 0 / 16%);
+            padding: 16px 14px;
+            font-size: 17px;
+            color: #a1a1a1;
+            outline: none;
+        }
+
+        &_freeTrial-btn {
+            width: 80px;
+            height: 49px;
+            background: #198ed9;
+            color: #fff;
+            font-size: 17px;
+            border: 1px solid #198ed9;
+            outline: none;
+            cursor: pointer;
+            line-height: 49px;
+            text-align: center;  
+        }
+
+        &_layout-footer {
+            width: 100%;
+            text-align: center;
+            color: #ababab;
+            font-size: 12px;
+            padding: 23px 10px;
+            background: #262626;
+            word-break: keep-all;
+        }
+
+        &_layout-footer a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: 700;
+        }
+            
+        
+
+        
+        
+        
+        
+
 
         
 
