--- a/src/pages/component/index.less
+++ b/src/pages/component/index.less
@@ -1,7 +1,11 @@
 * {
     margin: 0;
-    padding-top: 84px;
+    padding: 0px;
     font-family: PingFangSC,Microsoft Yahei,Hiragino Sans GB,Lantinghei SC,"Microsoft Sans Serif",WenQuanYi Micro Hei,sans-serif;
     box-sizing: border-box;
     
+}
+
+.myapp {
+    padding-top: 84px;
 }
