--- a/src/pages/component/HomePage/index.less
+++ b/src/pages/component/HomePage/index.less
@@ -108,41 +108,6 @@
             position: relative;
         }
         
-        &_bannerCarouselItems {
-            display: flex;
-            position: relative;
-            width: 4000px;
-        }
-
-        &_bannerCarouselItem {
-            width: 1000px;
-        }
-
-        &_CarouselItemImg {
-            width: 100%;
-        }
-
-        &_bannerCarouselDot {
-            display: flex;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            bottom: 5%;
-            justify-content: space-between;
-        }
-
-        &_bannerCarouselDotItem {
-            width: 15px;
-            height: 15px;
-            background: #e8f2fb;
-            border-radius: 50%;
-            margin-right: 15px;
-        }
-
-        &_bannerCarouselDotItem:active {
-            background: #3255e8;
-        }
-
         &_container-1 {
             padding: 47px 0 40px;
             width: 100%;
@@ -244,7 +209,6 @@
             text-align: center;
         }
         
-
         &_btn {
             width: 190px;
             height: 52px;
@@ -259,6 +223,7 @@
             border-color: rgb(32, 124, 211);
             line-height: 52px;
         }
+
         &_detailedIntroduce {
             color: rgb(32, 124, 211);
             margin-right: 35px;
@@ -359,13 +324,23 @@
             font-size: 16px;
             margin-right: 16px;
             align-items: center;
+            margin-bottom: 10px;
         }
 
-        &__iconfont ::before {
-            font-family: iconfont!important;
-            font-size: 16px;
-            font-style: normal;
-            -webkit-font-smoothing: antialiased;
+        &_icon-1 {
+            color: rgb(55, 101, 255);
+        }
+
+        &_icon-2 {
+            color: rgb(252, 77, 90);
+        }
+
+        &_icon-3 {
+            color: rgb(154, 67, 251);
+        }
+
+        &_icon-4 {
+            color: rgb(89, 171, 143);
         }
 
         &_immediateUse {
@@ -449,6 +424,10 @@
             align-items: flex-start;
             display: flex;
             color: #666;
+        }
+
+        &_marketingDescItem:last-child  {
+            margin-bottom: 0;
         }
 
         &_marketingDescIcon {
@@ -876,41 +855,6 @@
                 overflow: hidden;
                 position: relative;
             }
-            
-            &_bannerCarouselItems {
-                display: flex;
-                position: relative;
-                width: 4000px;
-            }
-    
-            &_bannerCarouselItem {
-                width: 1000px;
-            }
-    
-            &_CarouselItemImg {
-                width: 100%;
-            }
-    
-            &_bannerCarouselDot {
-                display: flex;
-                position: absolute;
-                left: 50%;
-                transform: translateX(-50%);
-                bottom: 5%;
-                justify-content: space-between;
-            }
-    
-            &_bannerCarouselDotItem {
-                width: 15px;
-                height: 15px;
-                background: #e8f2fb;
-                border-radius: 50%;
-                margin-right: 15px;
-            }
-    
-            &_bannerCarouselDotItem:active {
-                background: #3255e8;
-            }
     
             &_container-1 {
                 padding: 47px 0 40px;
@@ -1120,6 +1064,22 @@
                 align-items: flex-start;
                 flex-wrap: wrap;
             }
+
+            &_icon-1 {
+                color: rgb(55, 101, 255);
+            }
+    
+            &_icon-2 {
+                color: rgb(252, 77, 90);
+            }
+    
+            &_icon-3 {
+                color: rgb(154, 67, 251);
+            }
+            
+            &_icon-4 {
+                color: rgb(89, 171, 143);
+            }
     
             &_OACardDescItem {
                 width: 50%;
@@ -1137,6 +1097,7 @@
                 font-size: 16px;
                 margin-right: 16px;
                 align-items: center;
+                margin-bottom: 10px;
             }
     
             &__iconfont ::before {
@@ -1174,14 +1135,24 @@
                 margin-bottom: 3%;
                 display: flex;
                 align-items: center;
-                justify-content: center;
-                
+                justify-content: center; 
+                flex-direction: column;
             }
+
+            &_marketingpanelItem-1 {
+                flex-direction: column-reverse;
+            }
+
+            
     
             &_marketingItemCard {
+                width: 100%;
+                padding: 0 3%;
+                z-index: auto;
                 position: relative;
-                z-index: 300;
                 flex: 1 1;
+                animation-fill-mode: both;
+                animation-name: fadeInUp;
             }
             
             &_marketingCard {
@@ -1191,8 +1162,9 @@
                 background: #fff;
                 box-shadow: 0 6px 14px 3px rgba(16, 36, 213, 0.08);
                 border-radius: 10px;
-                padding: 0 36px 40px 36px;
+                padding: 0 0 40px 36px;
                 display: flex;
+                padding-right: 36px;
             }
     
             &_marketingCard:hover {
@@ -1204,30 +1176,33 @@
                 height: 100%;
                 flex-direction: column;
                 display: flex;
-                width: 495px;
-                height: 370px;
             }
     
             &_marketingCardTitle {
                 font-weight: 700;
-                font-size: 30px;
+                font-size: 23px;
                 border-bottom: 1px solid #ebebeb;
                 padding: 30px 0;
             }
     
             &_marketingCardDescriptions {
-                padding-top: .3rem;
+                padding-top: 30px;
                 flex-direction: column;
                 display: flex;
             }
     
             &_marketingDescItem {
                 min-width: 40%;
-                margin-bottom: 3%;
+                margin-bottom: 7%;
                 font-size: 16px;
                 align-items: flex-start;
                 display: flex;
                 color: #666;
+                height: auto;
+            }
+
+            &_marketingDescItem:last-child  {
+                margin-bottom: 0;
             }
     
             &_marketingDescIcon {
@@ -1260,6 +1235,10 @@
             &_marketingBtn-1, &_marketingBtn-2, &_marketingBtn-3 {
                 color: #fff;
                 margin-top: 42px;
+                width: 120px;
+                height: 36px;
+                background: #207cd3;
+                line-height: 36px;
             }
     
             &_marketingBtn-1 {
@@ -1277,17 +1256,14 @@
                 background-color: rgb(61, 83, 236);
             }
     
-            &_marketingItemImg-1, &_marketingItemImg-3  {
-                width: 54.33%;
-                margin-left: -2%;
+            &_marketingItemImg-1, &_marketingItemImg-2, &_marketingItemImg-3  {
+                width: 100%;
+                padding: 0;
+                margin: 0 0 4%;
+                animation-fill-mode: both;
+                animation-name: fadeInRight;
             }
     
-           &_marketingItemImg-2 {
-                width: 54.33%;
-                margin-left: 0;
-                margin-right: -2%;
-            }
-            
             &_container-4 {
                 background-color: rgb(255, 255, 255);
                 padding: 47px 0 40px;
