--- a/src/pages/manage/index.less
+++ b/src/pages/manage/index.less
@@ -31,16 +31,14 @@
         border-bottom: 1px solid black;
         position: relative;
     }
-}
 
-.item {
-    &-img {
+    &-itemImg {
         width: 800px;
         height: 500px;
         position: relative;
     }
-
-    &-remove {
+    
+    &-itemRemove {
         width: 50px;
         height: 50px;
         top: 2px;
